# psi4meta

./: .gitignore  README.md
PSIDownloadAnalyzer/: README  analyze-downloads.tcsh  parse-psi-dl.py
blueridge/: debug.csh  release.csh
ccqc/: psi4.nightly.ubuntu.debug.zsh  psi4.nightly.ubuntu.release.zsh  psi4.nightly.vortex.debug.zsh  psi4.nightly.vortex.release.zsh
cerebro/: debug.csh  release.csh
conda-download-analysis/: downloads_before_2016_07_04.txt
conda-recipes/: .yamllint  README.md  conda_build_config.yaml
conda-recipes/gcp/src/: CMakeLists.txt
docker/: Dockerfile  environment.yaml
ganymede/: debug.sh  release.sh
gardar/: RDR-gcc-4.8.4-python-2.7.3-release.pbs  RDR-gcc-4.8.4-python-2.7.5-release.pbs  RDR-gcc-4.8.4-python-2.7.8-release.pbs  RDR-gcc-4.8.4-python-3.3.0-release.pbs  RDR-gcc-4.8.4-python-3.3.6-release.pbs  RDR-gcc-4.8.4-python-3.4.2-release.pbs  RDR-intel13.1-release-ERD.pbs  RDR-intel13.1-release-MPI.pbs  RDR-intel13.1-release-MPI_ERD-JK.pbs  RDR-intel13.1-release-PCM.pbs
github-feed/: parse_gh_commits.py
installers/: construct.yaml  v1.10.1_contruct.yaml  v1.4.1_construct.yaml  v1.4_construct.yaml  v1.5_construct.yaml  v1.6.1_construct.yaml  v1.7_construct.yaml  v1.8.1_construct.yaml  v1.8.2_construct.yaml  v1.8_construct.yaml  v1.9.1_construct.yaml  v1.9.1_construct_revised.yaml  v1.9_construct.yaml
mac-psinet/: macpsinet_coverage.py  macpsinet_make.py  macpsinet_test.py
merzbow/: RDR-clang3.5-accelerate-debug.sh  RDR-clang3.5-accelerate-release.sh
psicode-dev-map/: README.md  codemeta2geojson.py  psi4-dev-map.geojson
(+314 files in other folders)
